[package]
name = "tut"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.15.1", features = ["v7"] }
bson = { version = "2.13.0", features = ["uuid-1"] }
chrono = "0.4.40"
color-backtrace = "0.7.0"
mongodb = "3.2.1"
rust-tradier = { path = "../rust-tradier" }
serde = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

# Settings to minimize release size from https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
